--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "clean": "yarn clean:build && yarn clean:node_modules",
     "clean:build": "rm -rf ./packages/*/build",
