--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "flow": "flow",
+    "flow:update": "flow-typed update",
     "build-library:prod": "rm -rf ./build && webpack-cli --mode=production --progress --colors",
     "build-library:dev": "rm -rf ./build && webpack-cli --mode=development --progress --colors",
     "lint": "../../node_modules/.bin/eslint ./src",
