--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -58,6 +58,7 @@
     "react-apollo": "2.3.1",
     "react-dom": "16.6.0",
     "react-redux": "5.1.1",
+    "react-emotion": "9.2.12",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sanitize.css": "8.0.0",
