--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ branches:
   only:
     - master
     - '/^greenkeeper/.*$/'
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn global add codecov
   - yarn global add firebase-tools
