--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -51,7 +51,7 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "facepaint": "1.2.1",
-    "graphql.macro": "^1.0.2",
+    "graphql.macro": "1.0.2",
     "jest-enzyme": "6.1.2",
     "normalize.css": "8.0.1",
     "react": "16.6.0",
