--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mattailes/website",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "proxy": "http://localhost:5000/website-b10e5/us-central1/api",
   "scripts": {
@@ -41,8 +41,8 @@
     "redux-mock-store": "1.5.3"
   },
   "dependencies": {
-    "@mattailes/types": "1.0.0",
-    "@mattailes/ui": "1.0.0",
+    "@mattailes/types": "^1.0.1",
+    "@mattailes/ui": "^1.0.1",
     "@reach/router": "1.2.1",
     "apollo-boost": "0.1.20",
     "cross-fetch": "2.2.3",
