--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
   - yarn global add codecov
   - yarn global add firebase-tools
-  - yarn global add lerna
+  - git checkout master
   - lerna bootstrap
 script:
   - yarn library:prod
