--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "husky": "1.1.3",
+    "lerna": "3.4.3",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3"
   }
