--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -41,8 +41,8 @@
     "redux-mock-store": "1.5.3"
   },
   "dependencies": {
-    "@mattailes/types": "^1.0.1",
-    "@mattailes/ui": "^1.0.1",
+    "@mattailes/types": "*",
+    "@mattailes/ui": "*",
     "@reach/router": "1.2.1",
     "apollo-boost": "0.1.20",
     "cross-fetch": "2.2.3",
