--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -34,10 +34,11 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
     "flow-bin": "0.86.0",
+    "jest-emotion": "9.2.11",
     "nock": "10.0.2",
     "raf": "3.4.1",
     "react-scripts": "2.1.1",
-    "react-test-renderer": "16.6.0",
+    "react-test-renderer": "16.6.3",
     "redux-mock-store": "1.5.3"
   },
   "dependencies": {
@@ -57,8 +58,8 @@
     "react": "16.6.0",
     "react-apollo": "2.3.1",
     "react-dom": "16.6.0",
-    "react-redux": "5.1.1",
     "react-emotion": "9.2.12",
+    "react-redux": "5.1.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sanitize.css": "8.0.0",
