--- a/package.json
+++ b/package.json
@@ -48,6 +48,41 @@
     "husky": "1.2.0",
     "lerna": "3.4.3",
     "lint-staged": "7.3.0",
-    "prettier": "1.15.2"
+    "prettier": "1.15.2",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
+    "nodemon-webpack-plugin": "3.0.1",
+    "react-scripts": "2.1.1",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.1.2",
+    "@storybook/addon-actions": "4.0.0",
+    "@storybook/addon-centered": "4.0.0",
+    "@storybook/addon-info": "4.0.0",
+    "@storybook/addon-links": "4.0.0",
+    "@storybook/addon-options": "4.0.0",
+    "@storybook/addons": "4.0.0",
+    "@storybook/components": "4.0.0",
+    "@storybook/react": "4.0.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-emotion": "9.2.11",
+    "webpack": "4.19.1",
+    "webpack-cli": "3.1.2",
+    "webpack-node-externals": "1.7.2",
+    "webpack-stylish": "0.1.8",
+    "jest-emotion": "9.2.11",
+    "nock": "10.0.2",
+    "raf": "3.4.1",
+    "react-test-renderer": "16.6.3",
+    "redux-mock-store": "1.5.3"
   }
 }
