--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -35,7 +35,8 @@
     "raf": "3.4.1",
     "react-scripts": "2.1.1",
     "react-test-renderer": "16.6.3",
-    "redux-mock-store": "1.5.3"
+    "redux-mock-store": "1.5.3",
+    "webpack-bundle-analyzer": "3.0.3"
   },
   "dependencies": {
     "@mattailes/types": "^1.1.6",
