--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "lerna": "3.4.3",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.5.1",
+  "packages": ["packages/*"],
   "version": "1.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true
