--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,8 @@
     "es"
   ],
   "dependencies": {
-    "emotion": "10.0.2",
+    "@emotion/core": "10.0.2",
+    "@emotion/styled": "10.0.2",
     "react": "16.6.3",
     "react-dom": "16.6.3"
   },
@@ -35,7 +36,6 @@
     "@storybook/components": "4.0.11",
     "@storybook/react": "4.0.11",
     "babel-loader": "8.0.4",
-    "babel-plugin-emotion": "10.0.2",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
