--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build-library:prod": "rm -rf ./build && webpack-cli --mode=production --progress --colors",
     "build-library:dev": "rm -rf ./build && webpack-cli --mode=development --progress --colors",
-    "lint": "../../node_modules/.bin/eslint ./src",
+    "lint": "../../node_modules/.bin/tslint ./src --fix",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook"
   },
@@ -23,6 +23,7 @@
     "@babel/core": "7.1.6",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/plugin-transform-typescript": "7.2.0",
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "7.0.0",
@@ -36,12 +37,6 @@
     "@storybook/components": "4.0.11",
     "@storybook/react": "4.0.11",
     "babel-loader": "8.0.4",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
     "react-scripts": "2.1.1",
     "webpack": "4.26.1",
     "webpack-cli": "3.1.2",
