--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,6 +10,7 @@
     "deploy": "firebase deploy --token $FIREBASE_TOKEN",
     "eject": "react-scripts eject",
     "lint": "../../node_modules/.bin/eslint ./src",
+    "postbuild": "react-snap",
     "start": "react-scripts start",
     "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test": "react-scripts test --env=jsdom"
@@ -23,11 +24,15 @@
       "lcov"
     ]
   },
+  "react-snap": {
+    "skipThirdPartyRequests": true
+  },
   "devDependencies": {
     "jest-emotion": "10.0.2",
     "nock": "10.0.2",
     "raf": "3.4.1",
     "react-scripts": "2.1.1",
+    "react-snap": "1.22.1",
     "react-test-renderer": "16.6.3",
     "redux-mock-store": "1.5.3",
     "source-map-explorer": "1.6.0",
