--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - yarn install --frozen-lockfile
 - lerna bootstrap
 script:
-- yarn library:prod
+- yarn library
 - yarn coverage
 - codecov
 - yarn coverage:cleanup
