--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean:node_modules": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
     "test": "yarn test:website",
     "test:website": "cd packages/website && yarn test && cd -",
-    "library": "lerna run build-library:dev",
-    "library:prod": "lerna run build-library:prod",
+    "library": "lerna run build-library",
     "start": "lerna run start",
     "build": "lerna run build",
     "coverage": "lerna run coverage",
