--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,16 +3,12 @@
   "version": "1.4.1",
   "private": true,
   "scripts": {
-    "build-library:prod": "rm -rf ./build && webpack-cli --mode=production --progress --colors",
-    "build-library:dev": "rm -rf ./build && webpack-cli --mode=development --progress --colors",
+    "build-library": "babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.tsx,.ts'",
     "lint": "../../node_modules/.bin/tslint ./src --fix",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook"
   },
   "main": "build/index.js",
-  "files": [
-    "es"
-  ],
   "dependencies": {
     "@emotion/core": "10.0.2",
     "@emotion/styled": "10.0.2",
@@ -20,14 +16,10 @@
     "react-dom": "16.6.3"
   },
   "devDependencies": {
+    "@babel/cli": "7.2.0",
     "@babel/core": "7.1.6",
-    "@babel/plugin-proposal-export-default-from": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/plugin-transform-typescript": "7.2.0",
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.1.6",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.1.5",
+    "@babel/plugin-transform-react-jsx": "7.2.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@storybook/addon-actions": "4.0.11",
     "@storybook/addon-centered": "4.0.11",
     "@storybook/addon-info": "4.0.11",
@@ -37,9 +29,6 @@
     "@storybook/components": "4.0.11",
     "@storybook/react": "4.0.11",
     "babel-loader": "8.0.4",
-    "react-scripts": "2.1.1",
-    "webpack": "4.26.1",
-    "webpack-cli": "3.1.2",
-    "webpack-stylish": "0.1.8"
+    "react-scripts": "2.1.1"
   }
 }
