--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,13 +13,17 @@
     "@emotion/core": "10.0.2",
     "@emotion/styled": "10.0.2",
     "react": "16.6.3",
-    "react-dom": "16.6.3"
+    "react-dom": "16.6.3",
+    "typeface-fira-sans": "0.0.54",
+    "typography": "0.16.18",
+    "typography-plugin-code": "0.16.18",
+    "typography-theme-de-young": "0.16.18"
   },
   "devDependencies": {
     "@babel/cli": "7.2.0",
     "@babel/core": "7.1.6",
     "@babel/plugin-transform-react-jsx": "7.2.0",
-    "@babel/preset-typescript": "^7.1.0",
+    "@babel/preset-typescript": "7.1.0",
     "babel-loader": "8.0.4",
     "react-scripts": "2.1.1"
   }
