--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,5 @@
 {
   "name": "@mattailes/types",
   "version": "1.2.0",
-  "private": true,
-  "devDependencies": {
-    "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
-    "react-scripts": "2.1.1"
-  }
+  "private": true
 }
