--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,9 +8,8 @@
     ]
   },
   "scripts": {
-    "build": "babel --delete-dir-on-start -d build/ --verbose src/",
-    "lint": "../../node_modules/.bin/eslint ./src",
-    "watch:server": "webpack-cli --progress --colors --watch",
+    "build": "babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.ts,.tsx'",
+    "lint": "../../node_modules/.bin/tslint ./src",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
   "devDependencies": {
@@ -19,6 +18,7 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.1.6",
+    "@babel/preset-typescript": "7.1.0",
     "nodemon-webpack-plugin": "4.0.6",
     "react-scripts": "2.1.1"
   },
