--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "lerna": "3.5.1",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.6.0",
+  "packages": ["packages/*"],
   "version": "2.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true
