--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "2.1.3",
     "react-snap": "https://github.com/vidarc/react-snap.git",
     "react-test-renderer": "16.7.0",
+    "redux-devtools-extension": "2.13.7",
     "redux-mock-store": "1.5.3",
     "source-map-explorer": "1.6.0",
     "webpack-bundle-analyzer": "3.0.3"
