--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@emotion/core": "10.0.6",
     "@emotion/styled": "10.0.6",
+    "@fortawesome/fontawesome-svg-core": "1.2.12",
+    "@fortawesome/free-brands-svg-icons": "5.6.3",
+    "@fortawesome/free-regular-svg-icons": "5.6.3",
+    "@fortawesome/free-solid-svg-icons": "5.6.3",
+    "@fortawesome/react-fontawesome": "0.1.3",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "typeface-fira-sans": "0.0.54",
