--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -62,7 +62,7 @@
     "react-helmet": "5.2.0",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
+    "redux-saga": "0.16.2",
     "sanitize.css": "8.0.0",
     "shortid": "2.2.14"
   },
