--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,8 +27,9 @@
   "devDependencies": {
     "@babel/cli": "7.2.3",
     "@babel/core": "7.3.3",
+    "@babel/plugin-syntax-jsx": "7.2.0",
     "@babel/plugin-transform-react-jsx": "7.3.0",
-    "@babel/preset-typescript": "7.3.3",
+    "@babel/plugin-transform-typescript": "7.2.0",
     "babel-loader": "8.0.5",
     "react-scripts": "2.1.5"
   }
