--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ if: tag IS blank
 language: node_js
 node_js:
 - lts/*
-cache: yarn
+cache: 
+  yarn: true
+  directories:
+    - ~/.cache
 before_install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - export PATH="$HOME/.yarn/bin:$PATH"
