--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -3,7 +3,8 @@
   "version": "2.3.2",
   "private": true,
   "scripts": {
-    "open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "devDependencies": {
     "cypress": "^3.1.5"
