👷 adding in steps for e2e after build

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "clean:node_modules": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
     "test": "yarn test:website",
     "test:website": "cd packages/website && yarn test && cd -",
+    "test:e2e": "lerna run cypress:run",
+    "test:e2e:run": "start-server-and-test start:ci 5000 test:e2e",
     "library": "lerna run build-library",
     "start": "lerna run start",
+    "start:ci": "serve packages/website/build --single",
     "build": "lerna run build",
     "coverage": "lerna run coverage",
     "coverage:cleanup": "lerna run coverage:cleanup",
@@ -37,6 +40,8 @@
     "lerna": "3.13.1",
     "lint-staged": "8.1.5",
     "prettier": "1.16.4",
+    "serve": "10.1.2",
+    "start-server-and-test": "1.7.11",
     "tslint": "5.13.1",
     "tslint-config-airbnb": "5.11.1",
     "tslint-config-prettier": "1.18.0",
