--- a/packages/reason/package.json
+++ b/packages/reason/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@mattailes/reason",
   "version": "0.1.0",
+  "main": "lib/js/src/Index.bs.js",
   "scripts": {
     "build": "bsb -make-world",
     "start": "bsb -make-world -w -ws _ ",
@@ -10,7 +11,7 @@
   "keywords": [
     "BuckleScript"
   ],
-  "author": "",
+  "author": "Matthew Ailes",
   "license": "MIT",
   "dependencies": {
     "react": "16.8.4",
