--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@emotion/core": "10.0.10",
     "@emotion/styled": "10.0.10",
+    "@mattailes/reason": "^0.1.0",
     "@mattailes/types": "^3.0.0",
     "@mattailes/typography": "^3.0.1",
     "@mattailes/ui": "^3.0.1",
@@ -49,13 +50,13 @@
     "dotenv": "7.0.0",
     "facepaint": "1.2.1",
     "graphql.macro": "1.3.5",
-    "react": "16.8.6",
     "react-apollo": "2.5.4",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.0",
     "react-redux": "6.0.1",
-    "redux": "4.0.1",
+    "react": "16.8.6",
     "redux-saga": "1.0.2",
+    "redux": "4.0.1",
     "sanitize.css": "8.0.0",
     "shortid": "2.2.14"
   },
