--- a/packages/reason/package.json
+++ b/packages/reason/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "main": "index.ts",
   "scripts": {
-    "build": "yarn clean && bsb -make-world",
     "build-library": "bsb -make-world",
     "start": "bsb -make-world -w -ws _ ",
     "clean": "bsb -clean-world",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no tests\" && exit 0"
   },
   "keywords": [
     "BuckleScript"
@@ -20,6 +19,6 @@
     "reason-react": "0.6.0"
   },
   "devDependencies": {
-    "bs-platform": "4.0.3"
+    "bs-platform": "4.0.18"
   }
 }
