✨ init vue commit

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -9,6 +9,10 @@
       "tslint --fix",
       "git add"
     ],
+    "*.vue": [
+      "prettier --write",
+      "git add"
+    ],
     "*.json": [
       "prettier --write",
       "git add"
