--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,4 +1,15 @@
 {
   "extends": "../../tsconfig",
-  "include": ["src"]
+  "compilerOptions": {
+    "allowUnreachableCode": false,
+    "declaration": false,
+    "experimentalDecorators": true,
+    "module": "esnext",
+    "target": "es2017",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "types": ["webpack-env"]
+  },
+  "include": ["src", "types/jsx.d.ts"],
+  "exclude": ["node_modules"]
 }
