--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig",
-  "include": ["src"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "compilerOptions": {
+    "isolatedModules": true
+  }
 }
