--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -19,6 +19,7 @@
     "outDir": ".tmp",
     "pretty": true,
     "removeComments": false,
+    "strictPropertyInitialization": false,
     "target": "es2017",
     "types": []
   },
