--- a/packages/website-vue/firebase.json
+++ b/packages/website-vue/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "target": "mattailes-vue",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
