--- a/packages/website-vue/package.json
+++ b/packages/website-vue/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
     "test:unit": "vue-cli-service test:unit",
-    "deploy": "firebase deploy --token $FIREBASE_TOKEN"
+    "deploy": "firebase deploy --only hosting:mattailes-vue --token $FIREBASE_TOKEN"
   },
   "dependencies": {
     "vue": "2.6.10",
