🚀 updating where api code deploys

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,6 +2,9 @@
   "name": "@mattailes/api",
   "version": "3.0.3",
   "private": true,
+  "engines": {
+    "node": "8"
+  },
   "workspaces": {
     "nohoist": [
       "@babel/runtime"
@@ -10,7 +13,7 @@
   "scripts": {
     "build": "babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.ts,.tsx'",
     "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix",
-    "deploy": "firebase deploy --token $FIREBASE_TOKEN"
+    "deploy": "firebase deploy --only functions --token $FIREBASE_TOKEN"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
