--- a/packages/website/firebase.json
+++ b/packages/website/firebase.json
@@ -14,7 +14,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31536000"
+            "value": "max-age=31536000, immutable"
           }
         ]
       },
@@ -23,7 +23,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "private, max-age=31536000"
+            "value": "private, max-age=31536000, immutable"
           }
         ]
       }
