⚡️ upgrading functions to use node 10

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,6 +2,9 @@
   "name": "@mattailes/api",
   "version": "4.0.0",
   "private": true,
+  "engines": {
+    "node": "10"
+  },
   "workspaces": {
     "nohoist": [
       "@babel/runtime"
