--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,9 @@
     "@babel/polyfill": "7.4.3",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-typescript": "7.3.3",
+    "apollo": "2.8.3",
+    "apollo-link": "1.2.11",
+    "apollo-link-http": "1.5.14",
     "nodemon-webpack-plugin": "4.0.8",
     "react-scripts": "2.1.8"
   },
@@ -31,7 +34,6 @@
     "firebase-admin": "7.2.0",
     "firebase-functions": "2.2.1",
     "graphql": "14.2.1",
-    "graphql-tools": "4.0.4",
     "lodash.merge": "4.6.1"
   }
 }
