--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "lerna": "3.10.5",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.13.4",
+  "packages": ["packages/*"],
   "version": "4.0.5",
   "npmClient": "yarn",
   "useWorkspaces": true
