--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,9 +21,7 @@
     "@babel/preset-typescript": "7.3.3",
     "apollo": "2.8.3",
     "apollo-link": "1.2.11",
-    "apollo-link-http": "1.5.14",
-    "nodemon-webpack-plugin": "4.0.8",
-    "react-scripts": "2.1.8"
+    "apollo-link-http": "1.5.14"
   },
   "dependencies": {
     "@babel/runtime": "7.4.3",
