--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,12 @@
   "extends": ["config:base"],
   "schedule": "before 3am on Monday",
   "semanticCommits": true,
+  "masterIssue": true,
   "packageRules": [
+    {
+      "groupName": "development dependencies",
+      "depTypeList": ["devDependencies"]
+    },
     {
       "groupName": "production dependencies",
       "packageNames": [
@@ -33,10 +38,6 @@
         "^typography",
         "^vue"
       ]
-    },
-    {
-      "groupName": "development dependencies",
-      "depTypeList": ["devDependencies"]
     }
   ]
 }
