🎨 organizing depedencies better

--- a/packages/reason/package.json
+++ b/packages/reason/package.json
@@ -14,11 +14,9 @@
   "author": "Matthew Ailes",
   "license": "MIT",
   "dependencies": {
+    "bs-platform": "5.0.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "reason-react": "0.7.0"
-  },
-  "devDependencies": {
-    "bs-platform": "5.0.3"
   }
 }
