--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,20 +12,18 @@
     "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix",
     "deploy": "firebase deploy --only functions --token $FIREBASE_TOKEN"
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
     "@babel/plugin-transform-runtime": "7.4.3",
     "@babel/polyfill": "7.4.3",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-typescript": "7.3.3",
-    "apollo": "2.8.3",
-    "apollo-link": "1.2.11",
-    "apollo-link-http": "1.5.14"
-  },
-  "dependencies": {
     "@babel/runtime": "7.4.4",
+    "apollo-link-http": "1.5.14",
+    "apollo-link": "1.2.11",
     "apollo-server-express": "2.4.8",
+    "apollo": "2.8.3",
     "cross-fetch": "3.0.2",
     "dataloader": "1.4.0",
     "express": "4.16.4",
