--- a/packages/website-vue/package.json
+++ b/packages/website-vue/package.json
@@ -9,24 +9,23 @@
     "deploy": "firebase deploy --only hosting:mattailes-vue --token $FIREBASE_TOKEN"
   },
   "dependencies": {
-    "vue": "2.6.10",
+    "@vue/cli-plugin-babel": "3.6.0",
+    "@vue/cli-plugin-typescript": "3.6.0",
+    "@vue/cli-service": "3.6.0",
+    "sass-loader": "7.1.0",
+    "sass": "1.19.0",
     "vue-router": "3.0.6",
+    "vue-template-compiler": "2.6.10",
+    "vue": "2.6.10",
     "vuex": "3.1.0"
   },
   "devDependencies": {
     "@mattailes/typography": "^4.0.0",
     "@mattailes/ui": "^4.0.4",
-    "@types/jest": "24.0.12",
-    "@vue/cli-plugin-babel": "3.6.0",
-    "@vue/cli-plugin-typescript": "3.6.0",
     "@vue/cli-plugin-unit-jest": "3.6.3",
-    "@vue/cli-service": "3.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "fibers": "3.1.1",
-    "sass": "1.19.0",
-    "sass-loader": "7.1.0",
-    "ts-jest": "24.0.2",
-    "vue-template-compiler": "2.6.10"
+    "ts-jest": "24.0.2"
   }
 }
