--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "packages/*"
   ],
   "resolutions": {
-    "webpack": "4.28.3"
+    "babel-jest": "24.8.0",
+    "webpack": "4.29.6"
   },
   "scripts": {
     "clean": "yarn clean:build && yarn clean:node_modules",
