🔧 updating api to use node 10

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,9 @@
       "@babel/runtime"
     ]
   },
+  "engines": {
+    "node": "10"
+  },
   "scripts": {
     "build": "babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.ts,.tsx'",
     "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix",
