--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ cache:
   yarn: true
   directories:
     - ~/.cache
+addons:
+  apt:
+    packages:
+      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+      - libgconf-2-4
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
