--- a/package.json
+++ b/package.json
@@ -43,16 +43,22 @@
     "@types/react-test-renderer": "16.9.0",
     "@types/typography": "0.16.2",
     "@types/webpack-env": "1.14.0",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
+    "eslint": "6.2.2",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.1.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "2.0.1",
     "husky": "3.0.4",
     "lerna": "3.16.4",
     "lint-staged": "9.2.3",
     "prettier": "1.18.2",
     "serve": "11.1.0",
     "start-server-and-test": "1.10.0",
-    "tslint": "5.18.0",
-    "tslint-config-airbnb": "5.11.1",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-react": "4.0.0",
     "typescript": "3.5.3"
   }
 }
