--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,8 +11,7 @@
     "node": "10"
   },
   "scripts": {
-    "build": "babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.ts,.tsx'",
-    "lint": "../../node_modules/.bin/tslint --project tsconfig.json --fix",
+    "build": "tsc && babel --delete-dir-on-start -d build/ --verbose src/ --extensions '.ts,.tsx'",
     "deploy": "firebase deploy --only functions --token $FIREBASE_TOKEN"
   },
   "dependencies": {
@@ -23,6 +22,7 @@
     "@babel/preset-env": "7.5.5",
     "@babel/preset-typescript": "7.3.3",
     "@babel/runtime": "7.5.5",
+    "@google-cloud/firestore": "2.2.9",
     "apollo-link": "1.2.12",
     "apollo-link-http": "1.5.15",
     "apollo-server-express": "2.9.0",
