--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/reach__router": "1.2.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-helmet": "5.0.9",
     "@types/react-test-renderer": "16.9.0",
     "@types/typography": "0.16.2",
     "@types/webpack-env": "1.14.0",
