--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-helmet": "5.0.9",
+    "@types/react-redux": "7.1.2",
     "@types/react-test-renderer": "16.9.0",
     "@types/typography": "0.16.2",
     "@types/webpack-env": "1.14.0",
