--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -9,7 +9,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "jsxFactory": "h",
-    "lib": ["dom", "es2017"],
+    "lib": ["dom", "es2017", "esnext.asynciterable"],
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
