--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,12 @@
 on: [push, pull_request]
 
-steps:
-  - uses: actions/checkout@master
-  - uses: actions/setup-node@v1
-    with:
-      node-version: '10.x'
-  - run: yarn install --frozen-lockfile
+jobs:
+  build:
+    runs-on: ubuntu-16.04
+  name: Build and Test
+  steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+    - run: yarn install --frozen-lockfile
