--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,6 +28,7 @@
     "apollo-server-express": "2.9.3",
     "cross-fetch": "3.0.4",
     "dataloader": "1.4.0",
+    "date-fns": "2.2.1",
     "express": "4.17.1",
     "firebase-admin": "8.5.0",
     "firebase-functions": "3.2.0",
